; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8192u/extr_r8192U_dm.c_dm_check_fsync.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8192u/extr_r8192U_dm.c_dm_check_fsync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.r8192_priv = type { i64, i32, i64, i64, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64, i64, i32, %struct.TYPE_3__*, i32, i32, i32, i32, i32, i32 }
%struct.TYPE_3__ = type { i32 }

@dm_check_fsync.reg_c38_State = internal global i64 0, align 8
@dm_check_fsync.reset_cnt = internal global i64 0, align 8
@COMP_HALDM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [49 x i8] c"RSSI %d TimeInterval %d MultipleTimeInterval %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [70 x i8] c"RateBitmap 0x%x FirstDiffRateThreshold %d SecondDiffRateThreshold %d\0A\00", align 1
@IEEE80211_LINKED = common dso_local global i64 0, align 8
@HT_IOT_ACT_CDD_FSYNC = common dso_local global i32 0, align 4
@rOFDM0_RxDetector3 = common dso_local global i32 0, align 4
@REG_C38_TH = common dso_local global i64 0, align 8
@RegC38_Default = common dso_local global i64 0, align 8
@RegC38_Fsync_AP_BCM = common dso_local global i64 0, align 8
@RegC38_NonFsync_Other_AP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dm_check_fsync(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.r8192_priv*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call %struct.r8192_priv* @ieee80211_priv(%struct.net_device* %4)
  store %struct.r8192_priv* %5, %struct.r8192_priv** %3, align 8
  %6 = load i32, i32* @COMP_HALDM, align 4
  %7 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %8 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %7, i32 0, i32 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 9
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %13 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %12, i32 0, i32 4
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 8
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %18 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %17, i32 0, i32 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 7
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @RT_TRACE(i32 %6, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %16, i32 %21)
  %23 = load i32, i32* @COMP_HALDM, align 4
  %24 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %25 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %24, i32 0, i32 4
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 6
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %30 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %29, i32 0, i32 4
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 5
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %35 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %34, i32 0, i32 4
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 4
  %38 = load i32, i32* %37, align 8
  %39 = call i32 @RT_TRACE(i32 %23, i8* getelementptr inbounds ([70 x i8], [70 x i8]* @.str.1, i64 0, i64 0), i32 %28, i32 %33, i32 %38)
  %40 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %41 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %40, i32 0, i32 4
  %42 = load %struct.TYPE_4__*, %struct.TYPE_4__** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = load i64, i64* @IEEE80211_LINKED, align 8
  %46 = icmp eq i64 %44, %45
  br i1 %46, label %47, label %129

47:                                               ; preds = %1
  %48 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %49 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %48, i32 0, i32 4
  %50 = load %struct.TYPE_4__*, %struct.TYPE_4__** %49, align 8
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %50, i32 0, i32 3
  %52 = load %struct.TYPE_3__*, %struct.TYPE_3__** %51, align 8
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = load i32, i32* @HT_IOT_ACT_CDD_FSYNC, align 4
  %56 = and i32 %54, %55
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %58, label %129

58:                                               ; preds = %47
  %59 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %60 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %59, i32 0, i32 4
  %61 = load %struct.TYPE_4__*, %struct.TYPE_4__** %60, align 8
  %62 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %61, i32 0, i32 1
  %63 = load i64, i64* %62, align 8
  %64 = icmp eq i64 %63, 0
  br i1 %64, label %65, label %90

65:                                               ; preds = %58
  %66 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %67 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %66, i32 0, i32 4
  %68 = load %struct.TYPE_4__*, %struct.TYPE_4__** %67, align 8
  %69 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %68, i32 0, i32 2
  %70 = load i32, i32* %69, align 8
  switch i32 %70, label %88 [
    i32 130, label %71
    i32 128, label %78
    i32 129, label %87
  ]

71:                                               ; preds = %65
  %72 = load %struct.net_device*, %struct.net_device** %2, align 8
  %73 = call i32 @dm_StartHWFsync(%struct.net_device* %72)
  %74 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %75 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %74, i32 0, i32 4
  %76 = load %struct.TYPE_4__*, %struct.TYPE_4__** %75, align 8
  %77 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %76, i32 0, i32 2
  store i32 129, i32* %77, align 8
  br label %89

78:                                               ; preds = %65
  %79 = load %struct.net_device*, %struct.net_device** %2, align 8
  %80 = call i32 @dm_EndSWFsync(%struct.net_device* %79)
  %81 = load %struct.net_device*, %struct.net_device** %2, align 8
  %82 = call i32 @dm_StartHWFsync(%struct.net_device* %81)
  %83 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %84 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %83, i32 0, i32 4
  %85 = load %struct.TYPE_4__*, %struct.TYPE_4__** %84, align 8
  %86 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %85, i32 0, i32 2
  store i32 129, i32* %86, align 8
  br label %89

87:                                               ; preds = %65
  br label %88

88:                                               ; preds = %65, %87
  br label %89

89:                                               ; preds = %88, %78, %71
  br label %115

90:                                               ; preds = %58
  %91 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %92 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %91, i32 0, i32 4
  %93 = load %struct.TYPE_4__*, %struct.TYPE_4__** %92, align 8
  %94 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %93, i32 0, i32 2
  %95 = load i32, i32* %94, align 8
  switch i32 %95, label %113 [
    i32 130, label %96
    i32 129, label %103
    i32 128, label %112
  ]

96:                                               ; preds = %90
  %97 = load %struct.net_device*, %struct.net_device** %2, align 8
  %98 = call i32 @dm_StartSWFsync(%struct.net_device* %97)
  %99 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %100 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %99, i32 0, i32 4
  %101 = load %struct.TYPE_4__*, %struct.TYPE_4__** %100, align 8
  %102 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %101, i32 0, i32 2
  store i32 128, i32* %102, align 8
  br label %114

103:                                              ; preds = %90
  %104 = load %struct.net_device*, %struct.net_device** %2, align 8
  %105 = call i32 @dm_EndHWFsync(%struct.net_device* %104)
  %106 = load %struct.net_device*, %struct.net_device** %2, align 8
  %107 = call i32 @dm_StartSWFsync(%struct.net_device* %106)
  %108 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %109 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %108, i32 0, i32 4
  %110 = load %struct.TYPE_4__*, %struct.TYPE_4__** %109, align 8
  %111 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %110, i32 0, i32 2
  store i32 128, i32* %111, align 8
  br label %114

112:                                              ; preds = %90
  br label %113

113:                                              ; preds = %90, %112
  br label %114

114:                                              ; preds = %113, %103, %96
  br label %115

115:                                              ; preds = %114, %89
  %116 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %117 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %116, i32 0, i32 3
  %118 = load i64, i64* %117, align 8
  %119 = icmp ne i64 %118, 0
  br i1 %119, label %120, label %128

120:                                              ; preds = %115
  %121 = load i64, i64* @dm_check_fsync.reg_c38_State, align 8
  %122 = icmp ne i64 %121, 2
  br i1 %122, label %123, label %127

123:                                              ; preds = %120
  %124 = load %struct.net_device*, %struct.net_device** %2, align 8
  %125 = load i32, i32* @rOFDM0_RxDetector3, align 4
  %126 = call i32 @write_nic_byte(%struct.net_device* %124, i32 %125, i32 149)
  store i64 2, i64* @dm_check_fsync.reg_c38_State, align 8
  br label %127

127:                                              ; preds = %123, %120
  br label %128

128:                                              ; preds = %127, %115
  br label %211

129:                                              ; preds = %47, %1
  %130 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %131 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %130, i32 0, i32 4
  %132 = load %struct.TYPE_4__*, %struct.TYPE_4__** %131, align 8
  %133 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %132, i32 0, i32 2
  %134 = load i32, i32* %133, align 8
  switch i32 %134, label %150 [
    i32 129, label %135
    i32 128, label %142
    i32 130, label %149
  ]

135:                                              ; preds = %129
  %136 = load %struct.net_device*, %struct.net_device** %2, align 8
  %137 = call i32 @dm_EndHWFsync(%struct.net_device* %136)
  %138 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %139 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %138, i32 0, i32 4
  %140 = load %struct.TYPE_4__*, %struct.TYPE_4__** %139, align 8
  %141 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %140, i32 0, i32 2
  store i32 130, i32* %141, align 8
  br label %151

142:                                              ; preds = %129
  %143 = load %struct.net_device*, %struct.net_device** %2, align 8
  %144 = call i32 @dm_EndSWFsync(%struct.net_device* %143)
  %145 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %146 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %145, i32 0, i32 4
  %147 = load %struct.TYPE_4__*, %struct.TYPE_4__** %146, align 8
  %148 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %147, i32 0, i32 2
  store i32 130, i32* %148, align 8
  br label %151

149:                                              ; preds = %129
  br label %150

150:                                              ; preds = %129, %149
  br label %151

151:                                              ; preds = %150, %142, %135
  %152 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %153 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %152, i32 0, i32 3
  %154 = load i64, i64* %153, align 8
  %155 = icmp ne i64 %154, 0
  br i1 %155, label %156, label %210

156:                                              ; preds = %151
  %157 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %158 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %157, i32 0, i32 4
  %159 = load %struct.TYPE_4__*, %struct.TYPE_4__** %158, align 8
  %160 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %159, i32 0, i32 0
  %161 = load i64, i64* %160, align 8
  %162 = load i64, i64* @IEEE80211_LINKED, align 8
  %163 = icmp eq i64 %161, %162
  br i1 %163, label %164, label %198

164:                                              ; preds = %156
  %165 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %166 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %165, i32 0, i32 0
  %167 = load i64, i64* %166, align 8
  %168 = load i64, i64* @REG_C38_TH, align 8
  %169 = icmp sle i64 %167, %168
  br i1 %169, label %170, label %178

170:                                              ; preds = %164
  %171 = load i64, i64* @dm_check_fsync.reg_c38_State, align 8
  %172 = icmp ne i64 %171, 1
  br i1 %172, label %173, label %177

173:                                              ; preds = %170
  %174 = load %struct.net_device*, %struct.net_device** %2, align 8
  %175 = load i32, i32* @rOFDM0_RxDetector3, align 4
  %176 = call i32 @write_nic_byte(%struct.net_device* %174, i32 %175, i32 144)
  store i64 1, i64* @dm_check_fsync.reg_c38_State, align 8
  br label %177

177:                                              ; preds = %173, %170
  br label %197

178:                                              ; preds = %164
  %179 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %180 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %179, i32 0, i32 0
  %181 = load i64, i64* %180, align 8
  %182 = load i64, i64* @REG_C38_TH, align 8
  %183 = add nsw i64 %182, 5
  %184 = icmp sge i64 %181, %183
  br i1 %184, label %185, label %196

185:                                              ; preds = %178
  %186 = load i64, i64* @dm_check_fsync.reg_c38_State, align 8
  %187 = icmp ne i64 %186, 0
  br i1 %187, label %188, label %195

188:                                              ; preds = %185
  %189 = load %struct.net_device*, %struct.net_device** %2, align 8
  %190 = load i32, i32* @rOFDM0_RxDetector3, align 4
  %191 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %192 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %191, i32 0, i32 1
  %193 = load i32, i32* %192, align 8
  %194 = call i32 @write_nic_byte(%struct.net_device* %189, i32 %190, i32 %193)
  store i64 0, i64* @dm_check_fsync.reg_c38_State, align 8
  br label %195

195:                                              ; preds = %188, %185
  br label %196

196:                                              ; preds = %195, %178
  br label %197

197:                                              ; preds = %196, %177
  br label %209

198:                                              ; preds = %156
  %199 = load i64, i64* @dm_check_fsync.reg_c38_State, align 8
  %200 = icmp ne i64 %199, 0
  br i1 %200, label %201, label %208

201:                                              ; preds = %198
  %202 = load %struct.net_device*, %struct.net_device** %2, align 8
  %203 = load i32, i32* @rOFDM0_RxDetector3, align 4
  %204 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %205 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %204, i32 0, i32 1
  %206 = load i32, i32* %205, align 8
  %207 = call i32 @write_nic_byte(%struct.net_device* %202, i32 %203, i32 %206)
  store i64 0, i64* @dm_check_fsync.reg_c38_State, align 8
  br label %208

208:                                              ; preds = %201, %198
  br label %209

209:                                              ; preds = %208, %197
  br label %210

210:                                              ; preds = %209, %151
  br label %211

211:                                              ; preds = %210, %128
  %212 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %213 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %212, i32 0, i32 3
  %214 = load i64, i64* %213, align 8
  %215 = icmp ne i64 %214, 0
  br i1 %215, label %216, label %233

216:                                              ; preds = %211
  %217 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %218 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %217, i32 0, i32 2
  %219 = load i64, i64* %218, align 8
  %220 = load i64, i64* @dm_check_fsync.reset_cnt, align 8
  %221 = icmp ne i64 %219, %220
  br i1 %221, label %222, label %232

222:                                              ; preds = %216
  %223 = load %struct.net_device*, %struct.net_device** %2, align 8
  %224 = load i32, i32* @rOFDM0_RxDetector3, align 4
  %225 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %226 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %225, i32 0, i32 1
  %227 = load i32, i32* %226, align 8
  %228 = call i32 @write_nic_byte(%struct.net_device* %223, i32 %224, i32 %227)
  store i64 0, i64* @dm_check_fsync.reg_c38_State, align 8
  %229 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %230 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %229, i32 0, i32 2
  %231 = load i64, i64* %230, align 8
  store i64 %231, i64* @dm_check_fsync.reset_cnt, align 8
  br label %232

232:                                              ; preds = %222, %216
  br label %244

233:                                              ; preds = %211
  %234 = load i64, i64* @dm_check_fsync.reg_c38_State, align 8
  %235 = icmp ne i64 %234, 0
  br i1 %235, label %236, label %243

236:                                              ; preds = %233
  %237 = load %struct.net_device*, %struct.net_device** %2, align 8
  %238 = load i32, i32* @rOFDM0_RxDetector3, align 4
  %239 = load %struct.r8192_priv*, %struct.r8192_priv** %3, align 8
  %240 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %239, i32 0, i32 1
  %241 = load i32, i32* %240, align 8
  %242 = call i32 @write_nic_byte(%struct.net_device* %237, i32 %238, i32 %241)
  store i64 0, i64* @dm_check_fsync.reg_c38_State, align 8
  br label %243

243:                                              ; preds = %236, %233
  br label %244

244:                                              ; preds = %243, %232
  ret void
}

declare dso_local %struct.r8192_priv* @ieee80211_priv(%struct.net_device*) #1

declare dso_local i32 @RT_TRACE(i32, i8*, i32, i32, i32) #1

declare dso_local i32 @dm_StartHWFsync(%struct.net_device*) #1

declare dso_local i32 @dm_EndSWFsync(%struct.net_device*) #1

declare dso_local i32 @dm_StartSWFsync(%struct.net_device*) #1

declare dso_local i32 @dm_EndHWFsync(%struct.net_device*) #1

declare dso_local i32 @write_nic_byte(%struct.net_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
